# edu-usecase-sesac-product-engineering-project

./: README.md
projects/finance-1/: .dockerignore  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
projects/finance-1/apps/backend/: .env.example  Dockerfile  main.py
projects/finance-1/apps/frontend/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
projects/finance-1/datasets/chunks/: 20250122-금소법-현대카드M-V1.jsonl  20260107-X.jsonl  250117-신용카드설명서-T3-Edition2.jsonl  250220-현대카드-T3-Edition2-가이드북.jsonl  250813-신용카드설명서-X.jsonl  Digital-Lover-신용카드-설명서.jsonl  KB-Easy-Pick-카드.jsonl  KB-FINETECH-카드.jsonl  KB-My-WE-SH-카드.jsonl  KB-Star-카드.jsonl  KB-The-Easy-카드.jsonl  KB-국민-굿데이-카드.jsonl  KB-마이원-카드.jsonl  KB-직장인-보너스-체크카드.jsonl  KB-청춘대로-톡톡카드.jsonl  KB-탄탄대로-Miz-Mr.jsonl  T-AEY-20241216-1207-03-금소법-Summit-V1.jsonl  T-AEY-20251125-0941-97-가이드북-Summit-V2-1-2.jsonl  가이드북-DIGITAL-LOVER-260107.jsonl  (+11 more)
projects/finance-1/docs/: architecture.md  pipeline.md
projects/team-2/: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  reproduce_issue.py  verify_rag_import.py
projects/team-2/data/: testcase(50).xlsx
projects/team-2/docs/: llm_feature_gaps.md  workflow_guide.md  멘토링_리뷰.md  아키텍처_다이어그램.html  의료 서비스 기획서(re).md
projects/team-2/tests/: README_TESTS.md  test_build_alarm_plan.py  test_detect_closure.py  test_extract_clinical.py  test_extract_doctor.py  test_finalize_user_message.py  test_rag_integration.py  test_reflect_patient_state.py  test_safety_guardrail.py  test_summarize_guidelines.py
(+269 files in other folders)
