[project]
name = "medical-workflow"
version = "0.1.0"
description = "의료 진료 전사 분석 워크플로우"
requires-python = ">=3.12,<3.13"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.3.0",
    "langchain-upstage>=0.1.0",
    "chromadb>=0.4.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/medical_workflow"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
